# bisect-presentation

./: .gitignore  pyproject.toml  todo_api.py  todo_api_test.py
